# c-raylib-template

./: .gitignore  CMakeLists.txt  README.md
src/: configuration.h  constants.h  game.c  game.h  main.c
